--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,9 @@ img{ max-width: 100%;}
 
 .navigation{ padding: 20px 0; position: relative; z-index: 2; background-color: #fff;}
 .subnavigation{ display: none;}
-.navigationSection { display: flex; flex-wrap: wrap; align-items: center;}
+.navigationSection { display: flex; flex-wrap: wrap; align-items: center; gap: 20px;}
 .navigationSection .mainLogo img{ max-width: 200px;}
-.navigationSection .navigationMenu{ margin-left: 64px; display: flex; flex-wrap: wrap; gap: 30px; align-items: center; flex: 1;}
+.navigationSection .navigationMenu{ margin-left: 44px; display: flex; flex-wrap: wrap; gap: 30px; align-items: center; flex: 1;}
 .navigationSection .navigationMenu a{ color: #000; font-size: 14px; font-weight: 700; padding: 30px 0;}
 .navigationSection .navigationMenu .navigationLink:hover .nav_link  + .subnavigation{ display: block; position: absolute; top: 100%; width: 100%; z-index: 1; left: 0; background-color: #fff; border-top: 1px solid #bdbdbd; border-radius: 0 0 16px 16px;}
 .subnavigation .subnavigationLinks{ display: flex; flex-wrap: wrap; gap: 20px; align-items: center; padding-top: 50px; padding-bottom: 30px; }
@@ -194,9 +194,9 @@ body:has(.navigationSection .navigationLink:hover)::after{ content: ''; position
 
 .formDesign{ display: flex; flex-wrap: wrap; gap: 15px 30px; max-width: 800px; margin: 0 auto;}
 .formDesign .inputBox{ width: calc(50% - 15px); display: flex; flex-direction: column; gap: 5px;}
-.formDesign .inputBox input, .formDesign .inputBox select, .formDesign .inputBox textarea{ padding: 5px 10px; border-radius: 10px; border: 1px solid #000;}
-.formDesign .button {width: fit-content;}
-.formDesignSection{ padding: 50px 0;} 
+.formDesign .inputBox input, .formDesign .inputBox select, .formDesign .inputBox textarea{     padding: 12px;  border-radius: 12px;  font-size: 14px;  border: 1px solid #CFD0D1;  line-height: 1.2;  color: #000;}
+.formDesign .inputBox select{    appearance: none; font-size: 14px; background: url("../images/downArrow.svg") no-repeat right 8px center; background-size: 12px;}
+.formDesign .button {width: fit-content;} 
 .payment_method_icon{ display: flex; flex-wrap: wrap }
 .payment_method p{ margin-bottom: 5px;}
 
@@ -209,7 +209,13 @@ body:has(.navigationSection .navigationLink:hover)::after{ content: ''; position
 .footerSection .footer_container .footer_Links .socialMedia a{ height: 40px; min-width: 40px; width: 40px; border-radius: 40px; display: flex; background-color: #fff;}
 .footerSection .footer_container .footer_Links a:hover{ color: #17bbef;}
 .footerSection .footer_container .footer_Links .socialMedia { display: flex; gap: 10px; flex-wrap: wrap;}
-  
+
+.buyNowSection p{ display: flex; align-items: center; gap: 10px; flex-wrap: wrap;} 
+.buyNowSection p a{ height: 40px; border-radius: 40px; padding: 10px; background-color: #fff;}
+.buyNowSection p a img{ width: 100%; height: 100%; object-fit: contain;}
+
+.fromBanner{ padding: 100px; background-color: #000; color: #fff; text-align: center;}
+ 
 @media(width <= 991.98px) {
     .mainTitle h2{ font-size: 28px;}
     .mainTitle p{ font-size: 16px;}
